# product-manual-agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN-v2.md  TEST_REPORT.md  VERIFICATION_REPORT_T4.md  pyproject.toml  railway.toml  requirements.txt  run.py
src/: __init__.py  models.py
src/agent/: __init__.py  graph.py  llm.py  prompts.py  schemas.py  tools.py
src/api/: __init__.py  main.py
src/api/templates/: index.html
src/doc_generator/: __init__.py  docx_writer.py  html_renderer.py  pdf_writer.py
src/pdf_generator/: __init__.py  pdf_generator.py
src/product_manual_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scraper/: __init__.py  amazon_scraper.py
src/translator/: __init__.py  translator.py
templates/: custom.html  manual.html  report.html
